<resources>
    <string name="app_name">Round Table Nepal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password/OTP</string>
    <string name="password_error_message">Please enter your password/OTP.</string>
    <string name="login_text">Login</string>
    <string name="enter_email_text">Enter Registered Email</string>
    <string name="done_text">Done</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="enter_key_here">Enter key here</string>
    <string name="select_search_type">Select search type</string>
    <string name="action_edit">Edit</string>
    <string name="round_table_international_text">The first Round Table was formed in Norwich, England in 1927. The Founder, Louis Marchesi, was a young member of Norwich Rotary Club who felt a need existed for a club where the young businessmen of the town could gather on a regular basis. At their meetings they could exchange ideas, learn from the experiences of their colleagues and play a collective part in the civic life of Norwich. Within a year of inception, the membership of this Round Table had grown to 85 and interest was being shown in establishing Round Table elsewhere. From a very early stage, it was agreed that Round Table would be non-religious, non-political club and this has continued to this day. ROund Table now flourishes in the majority of European countries, throughout Africa, the Middle East, Asia, New Zealand and America. In fact Round Table is represented in every continent of the world.</string>
    <string name="round_table_nepal_desc_text">Although Tabling was introduced to Nepal more than a decade ago, Round Table Nepal was formed in 1999. The first Table in Nepal was formed with the help of Sq. Leg Lalit Shah from a Table as far away as Madras, India with Tr. C.K Golchha as the charter chairman.

During the decade long period before formation of RTN, there were five tables in Nepal. These tables were under the Area IV of Round Table India, which helped lay foundations of the tabling movement in Nepal.

In 1999, Round Table India and Round Table Germany jointly sponsored the formation of independent association of Round Table Nepal.

The various clubs in Nepal have undertaken large social service projects. As identified to be the most essential sector requiring attention for long-term development of the people, RTN has adopted a long-term social service theme of “Build the Nation Through Education”. \n \n Currently, Round Table Nepal has 22 Clubs under its umbrella with a membership strength of 300+ members.</string>
    <string name="event_name">Event Name</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="venue">Venue</string>
    <string name="enter_event_venue">Enter event venue details</string>
    <string name="date">Date</string>
    <string name="enter_date">click here</string>
    <string name="time">Time</string>
    <string name="click_here">Click here</string>
    <string name="invitees">Invitees</string>
    <string name="spouce">Spouse</string>
    <string name="children">Children</string>
    <string name="add_event">Add Event</string>
    <string name="meeting_type">Meeting Type</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="confirm_message_text">Your request has been taken. This event will be confirmed and posted when reviewed by moderator.</string>
    <string name="headline_text">HeadLine</string>
    <string name="enter_news_headline">Enter News Headline</string>
    <string name="concern_tables_text">Concern Tables</string>
    <string name="news_deatils_text">News Details</string>
    <string name="submit_news">Submit News</string>
    <string name="add_news_text">Add News</string>
    <string name="event_details_text">Event Details</string>
    <string name="meeting_detail_text">Meeting Details</string>
    <string name="rtn_song_text">RTN Song</string>
    <string name="aim1">To develop the fellowship of young men through the medium of their business and professional Occupations and community service activities.</string>
    <string name="aim2">To encourage active and responsible citizenship by cultivating the highest ideals in business, professional and civic traditions.</string>
    <string name="aim3">To promote and further International understanding, friendship and co-operation.</string>
    <string name="aim4">To promote the extension of the Association.</string>
    <string name="aims_and_objective">Aims And Objective</string>
    <string name="board_members_text">Board Members</string>
    <string name="contact_details_text">Round Table Nepal \n\n3F-01 Sherpa Mall, Durbar Marg, \n\nKathmandu, Nepal. \n\nTel : 9818008800 \n\nFax : +977-1-4225474 \n\nemail : info@roundtablenepal.org \n\nwebsite : www.roundtablenepal.org</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="rtn_song_lyrics">If we could consider each other, A neighbor, a friend or a brother It would be a wonderful, wonderful world, It would be a wonderful world  \n\nIf each little kid had fresh milk each day, \n\nIf each old soul had some place to stay \n\nIf each working man had enough time to play, It would be a wonderful world.  \n\n** **  Chorus ** **   \n\nIf there was no poor and rich were content, If strangers were welcome wherever they went \nIf each of us knew what true brotherhood meant, It would be a wonderful world. \n\n** **  Chorus ** **  \n\nIf people all over the world trust one another, Not thinking about their race or their color \nIf they did agree to join hands altogether, It would be a wonderful world. \n\n** **  Chorus ** **  \n\nIf Tablers of Nepal can properly plan, To do for their country whatever they can \nIf FELLOWSHIP brings about SERVICE to man, It would be a wonderful world. \n\n** **  Chorus ** **  \n\nOh Boy! It would be a wonderful world.</string>
    <string name="request_otp_text">Request One Time Password ?</string>
    <string name="enter_registered_email_text">Enter Registered Email</string>
    <string name="request_new_access">Request New Access ?</string>
    <string name="request_access_title">Request Access</string>
    <string name="name_text">Enter Name</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_table_name">Enter Table Name</string>
    <string name="send_request_text">Send Request</string>
    <string name="request_access_confirmation">Your Request has been taken. We will reply you with the onfirmation to your request. Thank Yout !!</string>
    <string name="submit_photos_text">Submit Photo</string>
    <string name="search_members_title">Search Members</string>
    <string name="preference_name">AppPreference</string>
    <string name="enter_valid_email">Please enter valid Email</string>
    <string name="please_wait">Please Wait</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="enter_name_msg">Please enter your full name</string>
    <string name="enter_table_name_msg">Please enter table name</string>
    <string name="no_members_found">No Members Found</string>
    <string name="email">Email</string>
    <string name="table_name">Table Name</string>
    <string name="mobile">Mobile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="anniversary">Anniversary</string>
    <string name="spouse_name">Spouse Name</string>
    <string name="spouse_dob">Spouse Date of Birth</string>
    <string name="enter_time">Enter event time</string>
    <string name="select_at_least_one_table">Please select tables</string>
    <string name="something_went_wrong">Oops , Something went wrong</string>
    <string name="please_select_event_photo">Select event photo</string>
    <string name="enter_news_detail">Enter news deatils</string>
    <string name="please_select_news_photo">please select news picture</string>
    <string name="date_digit_data">123456789-0</string>
    <string name="mobile_digit_data">1324567980(-)</string>
    <string name="gcm_server_api_key">AIzaSyAdcp_ExRygjsNZCJatSuRa5lq-zVKbaLQ</string>
    <string name="enter_search_name">Enter name to search</string>
    <string name="enter_search_mobile">Enter mobile number</string>
    <string name="enter_blood_group">Enter blood group</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="please_select_search_type">Please select search type</string>
    <string name="enter_search_key">Please enter search key</string>
    <string name="please_enter_key_length">Please enter at least 4 characters</string>
    <string name="search_data">No search result</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="email_address">E-Mail Address</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="office_phone">Office Phone</string>
    <string name="enter_office_phone">Enter office phone</string>
    <string name="enter_spouse_name">Enter spouse name</string>
    <string name="anniversary_date">Anniversary Date</string>
    <string name="residence_phone">Residence Phone</string>
    <string name="enter_residence_phone">Enter residence phone</string>
    <string name="enter_designation">Enter designation</string>
    <string name="designation">Designation</string>
    <string name="residence_city">Residence City</string>
    <string name="enter_residence_city">Enter residence city</string>
    <string name="office_city">Office City</string>
    <string name="enter_office_city">Enter office city</string>
    <string name="state">State</string>
    <string name="enter_state">Enter state name</string>
    <string name="update">Update</string>
    <string name="date_is_not_valid">Selected date is not valid</string>
    <string name="enter_valid_mobile">Enter valid mobile number</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="enter_spouse_dob">Enter spouse date of birth</string>
    <string name="enter_annivesary_date">Enter anniversary date</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_select_bloodgroup">Please select blood group</string>
    <string name="photo_uploaded_success">Photo submitted successfully</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="maybe">MAY BE</string>
    <string name="no_image_selected">No image selected</string>
    <string name="no_events_avaiable">No events for you</string>
    <string name="no_meeting">No meeting for you</string>
    <string name="no_news_available">No news available</string>
    <string name="no_favourites_available">No stores available</string>
    <string name="meeting_procedure">Meeting Procedure</string>
</resources>