<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:padding="10dp"
    android:background="@android:color/white"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:src="@drawable/rtn_logo"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center_vertical"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_email"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:maxLength="50"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/emailEditText"
            android:textSize="22sp"
            android:inputType="textPassword"
            android:maxLength="15"
            />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true"
            android:text="@string/login_text"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/getOTPTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get OTP?"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>




</LinearLayout>